building the api
